backend: update swagger spec
